--- a/homefeed/homefeed.css
+++ b/homefeed/homefeed.css
@@ -8,6 +8,225 @@ body {
 
 }
 
+
+/* The sidebar menu */
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 280px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #F6D9AD; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+  
+  /* The navigation menu links */
+.sidenav a {
+    padding: 0px 18px 0px 30px;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: 'Mukta', sans-serif;
+    color: #635B5B;
+    display: block;
+}
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #fdfdfd;
+}
+
+
+.side_title {
+    background-color: #E7B873;
+    width: 80%;
+    border: 15px;
+    padding: 8px 5px 8px 15px;;
+    margin: 25px 25px 15px 25px;
+    font-family: 'Patua One', cursive;
+    color: #FAF2C5;
+    font-size: 28px;
+}
+
+/* search bar */
+  
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Style the search field */
+  form.example input[type=text] {
+    padding: 10px;
+    margin: 0px 0px 0px 25px;
+    font-size: 14px;
+    border: 1px solid #CDCDCD;
+    border-right: none;
+    float: left;
+    width: 65%;
+    height: 30px;
+    background: #F8F0E4;
+    color: #d4d4d4;
+    font-family: 'Mukta', sans-serif;
+
+  }
+
+  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #B6B6B6;
+    opacity: 1; /* Firefox */
+  }
+  
+  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #B6B6B6;
+  }
+  
+  ::-ms-input-placeholder { /* Microsoft Edge */
+    color: #B6B6B6;
+  }
+  
+  /* Style the submit button */
+  form.example button {
+    float: left;
+    width: 15%;
+    height: 30px;
+    padding: 5px;
+    margin-bottom: 15px;
+    background: #e6a33e;
+    color: white;
+    border: none;
+    font-size: 17px;
+    cursor: pointer;
+  }
+  
+  form.example button:hover {
+    background: #c78727;
+  }
+  
+  /* Clear floats */
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+
+/* filter buttons */
+
+/* Customize the label (the container) */
+.container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin: 5px 20px 5px 30px;
+    color: #635B5B;
+    cursor: pointer;
+    font-size: 18px;
+    font-family: 'Mukta', sans-serif;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    background-color: #f3eed2;
+    margin: 5px;
+    
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container:hover input ~ .checkmark {
+    background-color: #FAF2C5;
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .container input:checked ~ .checkmark {
+    background-color: #e6a33e;
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 5.5px;
+    top: 3px;
+    width: 2px;
+    height: 5px;
+    border: solid white ;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+/* Solid border for divider */
+hr.solid {
+    border-top: 0.1em solid #FAF2C5;
+    width:80%;
+    margin: 5px 25px 5px 25px;
+}
+
+  /* Style page content */
+.main {
+    margin-left: 280px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+}   
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+
+/* scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f7e9d5;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background:#ebc388;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #e6a33e;
+  }
+
+
+
 /* Section 1 */
 
 .section1 {
