--- a/settings/settings.css
+++ b/settings/settings.css
@@ -1,5 +1,7 @@
 html {
     font-family: 'Mulish', sans-serif;
+    scroll-behavior: smooth;
+    
 }
 
 body {
@@ -35,6 +37,7 @@ body {
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
     color: #fdfdfd;
+    background-color: #E7B873;
 }
 
 
@@ -59,6 +62,21 @@ body {
     color: #FAF2C5;
     font-size: 28px;
 }
+
+
+/* responsive siderbar details */
+
+/* Active/current link */
+/* .sidenav a.active {
+  background-color: #4CAF50;
+  color: white;
+} */
+
+/* Links on mouse-over */
+/* .sidenav a:hover:not(.active) {
+  background-color: #555;
+  color: white;
+} */
 
 /* search bar */
   
@@ -199,13 +217,14 @@ body {
 hr.solid {
     border-top: 0.1em solid #FAF2C5;
     width:100%;
-    margin: 5px 0px 5px 0px;
+    margin: 10px 0px 10px 0px;
 }
 
   /* Style page content */
 .main {
     margin-left: 280px; /* Same as the width of the sidebar */
     padding: 0px 10px;
+    padding-bottom: 50px;
 }   
   
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -214,33 +233,53 @@ hr.solid {
     .sidenav a {font-size: 18px;}
 }
 
+/* On screens that are less than 700px wide, make the sidebar into a topbar */
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+  .sidebar a {float: left;}
+  div.content {margin-left: 0;}
+}
+
+/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+@media screen and (max-width: 400px) {
+  .sidebar a {
+    text-align: center;
+    float: none;
+  }
+}
+
 
 
 /* log out button */
 
-a.button1{
+input[type=submit].button1{
     display:inline-block;
     padding:0.35em 1.2em;
     border:0.2em solid #e6a33e;
-    margin:1.5em 2em 0.5em 0;
+    margin:1em 2em 0.5em 0;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
-    
+    background-color: #F6D9AD;
     font-family: 'Mukta', sans-serif;
     font-weight:900;
     color:#e6a33e;
     text-align:center;
     transition: all 0.2s;
+    font-size: 18px;
     }
-a.button1:hover{
+input[type=submit].button1:hover{
     color:#000000;
     font-weight:120000;
     background-color:#FFFFFF;
     border:0.2em solid #FFFFFF;
     }
 @media all and (max-width:30em){
-    a.button1{
+    input[type=submit].button1{
     display:block;
     margin:0.4em auto;
     }
@@ -347,61 +386,273 @@ a.button1:hover{
 
 
 /* Section 1 */
-
 .section1 {
-    display: flex;
-    flex-direction: row;
+  color: #635B5B;
+  font-size: 18px;
+  font-family: 'Mukta', sans-serif;
+  
 }
 
-.section1 #cub-logo {
-    width: 30%;
+.account {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+  
 }
 
-.section1 #title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 64px;
-    font-weight: 800;
-}
-
-
-/* Section 2 */
-
-.section2 #content-blurb {
-    font-size: 24px;
-    border: 1px solid #3d9bc2;
-    border-radius: 30px;
-    padding: 1em;
-    margin-right: 5%;
-    justify-content: center;
-}
-
-/* Section 3 */
-
-.section3 .intro-container {
-    margin-top: 6%;
-}
-
-.section3 .intro-container #us {
-    font-size: 40px;
-    font-weight: 600;
-}
-
-.section3 .grid-pic-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    margin-top: 4%;
-    column-gap: 1rem;
-    row-gap: 1rem;
-}
-
-.section3 .grid-pic-container .team-member {
-    width: 70%;
+.account #profile-pic {
+    /* width: 30%;
     height: auto;
+    border-radius: 50%; */
+    
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
-    margin-bottom: 100px;
+    object-fit: cover;
+    margin-left: 15px;
 }
+
+.main #title {
+    font-weight: 600;
+    padding: 5px 5px 5px 10px;;
+    margin: 0px 0px 0px 0px;
+    text-decoration: underline;
+    font-family: 'Patua One', cursive;
+    color: #003262;
+    font-size: 40px;
+}
+
+.account #info {
+  display: flex;
+  flex-direction: column;
+  
+  margin: 15px 15px 15px 20px;
+  padding: 5px;
+  
+}
+
+.account #username {
+  font-size:25px;
+}
+
+.account #info a{
+  text-decoration: underline;
+  text-decoration-color: #5f9fdb;
+  color: #003262;
+  font-weight: 700;
+  
+}
+
+/* inputting info */
+
+input[type=text], select {
+  width: 300px;
+  height: 35px;
+  padding: 12px 10px;
+  margin: 15px 15px;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  border-radius: 4px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  color: #635B5B;
+  font-size: 15px;
+  font-family: 'Mukta', sans-serif;
+}
+
+
+
+input[type=text]:focus {
+  border: 3px solid #555;
+}
+
+form {
+  margin-left: 15px;
+
+}
+
+.form-box {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  grid-auto-rows: 50px;
+  
+  margin-right: 680px;
+}
+
+.form-box #address{
+  width: 600px;
+}
+
+/* submit button */
+
+input[type=submit].button2{
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.2em solid #003262;
+  margin:2em 2em 2em 0.7em;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  background-color: white;
+  font-family: 'Mukta', sans-serif;
+  font-weight:900;
+  color:#003262;
+  text-align:center;
+  transition: all 0.2s;
+  font-size: 18px;
+  }
+input[type=submit].button2:hover{
+  color:#ffffff;
+  font-weight:120000;
+  background-color:#A2E1F5;
+  border:0.2em solid #A2E1F5;
+  }
+@media all and (max-width:30em){
+  a.button2{
+  display:block;
+  margin:0.4em auto;
+  }
+}
+
+.form-box2 {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  grid-auto-rows: 60px;
+  margin-top: 15px;
+  margin-right: 420px;
+  line-height: 1;
+}
+
+/* contact us form */
+
+/* input[type=submit] {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.2em solid #003262;
+  margin:1em 2em 0.5em 0.7em;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-size: 18px;
+  font-family: 'Mukta', sans-serif;
+  font-weight:900;
+  color:#003262;
+  text-align:center;
+  transition: all 0.2s;
+  cursor: pointer;
+  background-color: white;
+}
+
+input[type=submit]:hover {
+  color:#ffffff;
+  font-weight:120000;
+  background-color:#A2E1F5;
+  border:0.2em solid #A2E1F5;
+} */
+
+.container2 {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  padding-top: 5px;
+  margin-right: 50px;
+  margin-top: 15px;
+}
+
+.form-box3 {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  align-items: center;
+  /* grid-auto-rows: 60px; */
+  grid-gap: 1px;
+  margin-top: 15px;
+  margin-right: 680px;
+  line-height: 1;
+}
+
+/* .form-box3 #message textarea{
+  align-items: start;
+
+} */
+
+.form-box3 #message {
+  width: 600px;
+  height: 35px;
+  padding: 12px 10px;
+  margin: 15px 15px;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  border-radius: 4px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  color: #635B5B;
+  font-size: 15px;
+  font-family: 'Mukta', sans-serif;
+  
+}
+
+.form-box3 select{
+  padding: 0px;
+  padding-left: 5px;
+  /* padding-top: 3px; */
+
+}
+
+.form-box3 #message-label {
+  align-content: flex-start; 
+}
+
+input[type=submit].button3{
+  display: inline;
+  padding:0.35em 1.2em;
+  border:0.2em solid #003262;
+  margin:1em 0.8em 1em 0.7em;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  background-color: white;
+  font-family: 'Mukta', sans-serif;
+  font-weight:900;
+  color:#003262;
+  text-align:center;
+  transition: all 0.2s;
+  font-size: 18px;
+  float: right;
+  }
+input[type=submit].button3:hover{
+  color:#ffffff;
+  font-weight:120000;
+  background-color:#A2E1F5;
+  border:0.2em solid #A2E1F5;
+  }
+@media all and (max-width:30em){
+  a.button3{
+  display:block;
+  margin:0.4em auto;
+  }
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+
 
 
 /* @media */
@@ -412,8 +663,4 @@ a.button1:hover{
         flex-direction: column;
     }
 
-    .section1 #cub-logo {
-        width: 70%;
-        justify-content: center;
-    }
-  } 
+}
