changed search bar text colour

--- a/homefeed/homefeed.css
+++ b/homefeed/homefeed.css
@@ -77,7 +77,7 @@ body {
     width: 85%;
     height: 30px;
     background: #F8F0E4;
-    color: #d4d4d4;
+    color: #635B5B;
     font-family: 'Mukta', sans-serif;
 
   }
