--- a/homefeed/homefeed.css
+++ b/homefeed/homefeed.css
@@ -206,6 +206,8 @@ hr.solid {
 .main {
     margin-left: 280px; /* Same as the width of the sidebar */
     padding: 0px 10px;
+    padding-bottom: 75px;
+    
 }   
   
   /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -274,19 +276,24 @@ input[type=submit].button1:hover{
     /* display: flex;
     flex-direction: row;
     align-items: center; */
-
     display:flex; 
     flex-wrap:wrap; 
-    flex-direction:row;
+    flex-direction:column;
     word-wrap: break-word;
     overflow-wrap: break-word;
     justify-content: center;
     font-family: 'Mukta', sans-serif;
     color: black;
+    
     /* position: absolute; */
     
    
 }
+
+/* .content #whole-post {
+  
+  box-shadow: 10px 5px 5px red;
+} */
 
 .content #post {
     font-size: 18px;
@@ -294,13 +301,14 @@ input[type=submit].button1:hover{
     /* word-wrap: break-word;
     overflow-wrap: break-word; */
     /* flex:auto auto auto; */
-    width: 350px; 
+    width: 550px; 
     /* width: 350px; */
     border: 25px solid #FAF2C5;
     background-color: #FFFDF2;
-    margin: 0px 50px 30px 30px;
+    margin: 0px 50px 30px 120px;
     padding: 20px;
     color: black;
+    box-shadow: 20px 25px 0px #003262;
 }
 
 .content #post-header{
@@ -309,12 +317,12 @@ input[type=submit].button1:hover{
     /* word-wrap: break-word;
     overflow-wrap: break-word; */
     /* flex:auto auto auto; */
-    width: 350px; 
+    width: 550px; 
     
-    margin: 50px 50px 0px 30px;
+    margin: 50px 50px 0px 120px;
     text-align: right;
     /* width: 350px; */
-    
+    box-shadow: 20px 26px 0px #003262;
     background-color: #A2E1F5;
     
     padding: 15px 25px 15px 10px;
