--- a/settings/settings.css
+++ b/settings/settings.css
@@ -557,16 +557,16 @@ input[type=submit]:hover {
 .container2 {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
-  padding-top: 5px;
+  padding: 20px 50px 20px 50px;
+  
   margin-right: 50px;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .form-box3 {
   display: grid;
   grid-template-columns: repeat(2,1fr);
-  align-items: center;
+  /* align-items: center; */
   /* grid-auto-rows: 60px; */
   grid-gap: 1px;
   margin-top: 15px;
@@ -604,7 +604,7 @@ input[type=submit]:hover {
 }
 
 .form-box3 #message-label {
-  align-content: flex-start; 
+  margin-top: 23px;
 }
 
 input[type=submit].button3{
