--- a/homefeed/homefeed.css
+++ b/homefeed/homefeed.css
@@ -33,6 +33,8 @@ body {
 
 #header-name {
   position: relative;
+  display: flex;
+  justify-content: left;
   left: 30px;
   font-family: Fredoka One;
   font-style: normal;
@@ -45,6 +47,8 @@ body {
 #logo {
   margin: 0.938em 0.938em 0.938em 1.875em;
   position: relative;
+  display: flex;
+  justify-content: flex-start;
   left: 15%;
   width: 70%;
   height: auto;
@@ -52,16 +56,19 @@ body {
 #header {
 /*    Fixed header and sidebar */
   display: flex;
+  align-items: center; 
+  justify-content: space-between;
   position: fixed;
   background-color: #FAF2C5;
   height: 6.25em;
   width: 100%;
   top: 0;
   z-index: 5;
-  margin-bottom: 10px;
+  padding-right: 2em;
+  /* margin-bottom: 10px; */
 }
 
-.right-shift { 
+/* .right-shift { 
   position: relative;
   display: flex;
   left: 45%;
@@ -74,9 +81,49 @@ body {
   color: #003262;
   margin: 15px;
   text-decoration: none;
-}
-.right-shift:hover{
+} */
+/* .right-shift:hover{
   color: #A2E1F5;
+} */
+
+.right-shift2 {
+  /* text-align: right; */
+  /* display: flex;
+  flex-wrap:wrap; 
+  flex-direction:row; */
+  /* word-wrap: break-word;
+  overflow-wrap: break-word; */
+  /* align-items: center;  */
+  /* justify-content: flex-end; */
+  
+}
+
+.right-shift2 a { 
+  
+  font-family: Patua One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.563em;
+  line-height: 2.313em;
+  color: #003262;
+  margin: 15px;
+  text-decoration: none;
+}
+.right-shift2 a:hover{
+  color: #A2E1F5;
+}
+
+.right-shift3 {
+  /* text-align: right; */
+  display: flex;
+  flex-wrap:wrap; 
+  flex-direction:row;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  align-items: center; 
+  justify-content: flex-start;
+  /* float: left; */
+  
 }
 
 /* The sidebar menu */
