--- a/full-app/calpals_profile/profile.css
+++ b/full-app/calpals_profile/profile.css
@@ -99,19 +99,13 @@ body{
 	background-color: #E7B873;
     width: 90%;	
     border: 15px;
-    padding: 5px 5px 5px 10px;;
-    margin: 10px 0px 15px 0px;
+    padding: 5px 5px 1px 8px;
+    margin: 10px 0px 10px 0px;
 }
 
 #pf-pic {
-	padding-top: 80%;
-}
-#pfpic {
-	display: flex;
-	width: 90%;
-	height: 90%;
-	margin: 15px;
-	align-content: center;
+    width: 100%;
+    height: 100%;
 }
 h2{
 	margin: 5px 5px 5px 5px;
@@ -144,7 +138,7 @@ h2{
     align-items: center; */
     display:flex; 
     flex-wrap:wrap; 
-    flex-direction:column;
+    flex-direction:column-reverse;
     word-wrap: break-word;
     overflow-wrap: break-word;
     justify-content: center;
@@ -157,8 +151,17 @@ h2{
    
 }
 
+#content-button-holder {
+    display: flex;
+    flex-direction: column;
+    order: 1;
+    justify-content: center;
+    align-items: center;
+}
 
-.content #post {
+
+
+.content .post {
     font-size: 1.125em;
     justify-content: center;
     /* word-wrap: break-word;
@@ -174,7 +177,7 @@ h2{
     box-shadow: 20px 25px 0px #003262;
 }
 
-.content #post-header{
+.content .post-header{
     font-size: 18px;
     justify-content: center;
     /* word-wrap: break-word;
@@ -193,7 +196,7 @@ h2{
     color: #003262;
 }
 
-.content #post-header a{
+.content .post-header a{
     padding: 5px;
     text-decoration: underline;
     text-decoration-color: #5f9fdb;
@@ -201,7 +204,7 @@ h2{
     font-weight: 700;
 }
 
-.content #post-header img{
+.content .post-header img{
     float: left;
     height: 30px;
     width: auto;
